reactor application usecases
